# api_to-s3_to-pg_with-airflow

./: .env  .gitignore  README.md  pyproject.toml
airflow/: airflow.cfg
airflow_home/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
config/: settings.py
dags/: first-dag.py  main.py
functions/: load_to_pg.py  load_to_s3.py
